dt-assets/scss/_details.scss
/* ... */
select.color-select {
    color: white;
    font-weight: bold;
    border-radius: 10px;
    option {
        background-color: white;
        color: black;
    }
    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' width='32' height='24' viewBox='0 0 32 24'><polygon points='0,0 32,0 16,24' style='fill: white'></polygon></svg>");
    border:none;
    text-shadow: rgba(0, 0, 0, 0.45) 0 0 6px;
}



.bordered-box{
    .section-header {
        display: flex;
    }
    .section-chevron {
        margin-inline-start:auto;
        margin-inline-end:0;
        img {
            vertical-align: middle; width:20px
        }
    }
    .chevron_down {
        display: none;
    }

    &.collapsed {
        .chevron_up {
            display: none;
        }
        .chevron_down {
            display: block;
        }
        .section-body {
            display: none;
        }
    }

}

//don't have typeaheads cover other elements
.typeahead__query {
    z-index: 1 !important;
}

.assigned-to-row {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    .status-square {
        height: 13px;
        width: 13px;
        display: inline-block;
        border-radius: 2px;
    }
    > span {
        margin-right: 10px;
    }
}
.dt_user_select .typeahead__cancel-button {
    visibility: inherit;
    line-height: 1.5;
}

#tasks-modal {
  .existing-task-action {
    font-size: 10px;
    color: $primary-color;
    margin: 0 5px;
  }
}


.details-second-bar {
    span { font-size: 12px; }
    button, a {
        font-size: 12px;
    }
    .title {
        font-size: 15px
    }
    .record-name-tagline {
        font-size: 10px;
        display: inline-block;
        span, a {
            font-size: 10px;
            vertical-align: baseline;
            margin: 0;
        }
    }
    .dt-record-type-icon {
        height: 10px;
        width: 10px;
        vertical-align: baseline;
    }
}

//user select field
.dt_user_select {
    margin-bottom:15px;
}

// link field
.add-link-dropdown {
    position: absolute;
    display: inline-block;
    margin: 0 5px;
}

.add-link-dropdown::before {
    content: "";
    position: absolute;
    width: 50px;
    height: 25px;
    transform: translate(-18px, -3px);
    cursor: pointer;
}

.add-link-dropdown__content {
  display: none;
  position: absolute;
  background-color: #fff;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  border: solid 1px #cacaca;
  z-index: 1;
  transform: translateX(-70%);
}

.add-link-dropdown:hover .add-link-dropdown__content {
    display: block;
}

.add-link-dropdown__content:hover {
    display: block;
}

.add-link__option {
    padding: 5px 10px;
    cursor: pointer;
}

.add-link__option:hover {
    background-color: #3f729b;
    color: #fff;
}

.link-section .section-subheader {
    display: none;
}

.link-section .section-subheader:has(+ div) {
    display: block;
}

.link-section .input-group {
    margin-bottom: 5px;
}

//assign to modal
#assigned_to_user_modal #filter-tabs img {
    height: 20px;
    width: 20px;
    display: inline-block;
    vertical-align: middle;
    margin-right: 2px;
}
.dispatcher-tile .populated-list .assigned-to-row > span {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}
.dispatcher-tile .populated-list .assigned-to-row:hover {
    background-color: #F2F2F2;
}
.dispatcher-tile .populated-list .assigned-to-row {
    padding: 5px 5px 0 5px;
    border-bottom: 1px solid rgba(128, 128, 128, 0.31);
}
.dispatcher-tile .populated-list {
    overflow-y: scroll;
    max-height: 250px;
}

//church health circle
.health-item {
    display: none;
    margin: auto;
    position: absolute;
    height: 50px;
    width: 50px;
    border-radius: 100%;
    font-size: 16px;
    color: black;
    text-align: center;
    font-style: italic;
    cursor: pointer;
}
.health-item img {
    height: 50px;
    width: 50px;
    filter: grayscale(1) opacity(0.75);
}
.practiced-item {
    filter: none !important;
}
.practiced-button {
    background-color: #3f729b !important;
    opacity: unset !important;
}
.practiced-button img {
    filter: none !important;;
}
.health-circle {
    display: block;
    margin: auto;
    height: 280px;
    width: 280px;
    border-radius: 100%;
    border: 3px darkgray dashed;
}
.health-grid {
    display: inline-block;
    position: relative;
    height: 100%;
    width: 100%;
    margin-left: auto;
    margin-right: auto;
}
.committed {
    border: 3px #4caf50 solid !important;
}
.group-progress-button img {
    filter: grayscale(1) contrast(1.35);
}
.empty-health {
    width: 35px;
    height: 35px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 40%;
}
.empty-health-text {
    text-align: center;
    font-style: italic;
    margin-left: -15%;
    margin-top: -15%;
}
/* ... */

